[gd_scene load_steps=4 format=3 uid="uid://dy8uadf36b78s"]

[ext_resource type="Script" path="res://menu/difficulty_selector.gd" id="1_dbks5"]

[sub_resource type="SystemFont" id="SystemFont_h7l8x"]
font_names = PackedStringArray("Impact")

[sub_resource type="LabelSettings" id="LabelSettings_25glp"]
line_spacing = 10.0
font_size = 24
outline_size = 2
outline_color = Color(0, 0, 0, 1)
shadow_size = 9
shadow_color = Color(0, 0, 0, 1)

[node name="Difficulty_Selector" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dbks5")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="Separator" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Game Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/shadow_offset_x = 12
theme_override_constants/shadow_offset_y = 7
theme_override_constants/outline_size = 24
theme_override_fonts/font = SubResource("SystemFont_h7l8x")
theme_override_font_sizes/font_size = 64
text = "S E L E C T   D I F F I C U L T Y"
label_settings = SubResource("LabelSettings_25glp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Separator" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="EasyButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Easy
"

[node name="Separator2" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="NormalButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Normal
"

[node name="Separator3" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HardButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Hard
"

[node name="Separator4" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="AdaptativeButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
text = "Adaptative
"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/EasyButton" to="." method="_on_easy_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/NormalButton" to="." method="_on_normal_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/HardButton" to="." method="_on_hard_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/AdaptativeButton" to="." method="_on_adaptative_button_pressed"]
